# network

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  axon_broadway_poc.py  bifrost_config.yml  dfx.json  docker-compose.yml  package.json  qualixar_age_governance.py  simulate_4h_hea_electrocatalysis.py  simulate_aether_mesh_vcsel.py  simulate_avatar_organ_chips.py  simulate_divertor_asymmetry.py  simulate_iqpe_quantum_chemistry.py  simulate_kriss_em_crawler.py  simulate_neat_medical_optics.py  simulate_nickelate_superconductor.py  simulate_optical_vortex.py  simulate_photonic_tensor_benchmark.py  simulate_quantum_electron_probe.py  simulate_quantum_fiber_stabilizer.py  simulate_single_atom_phonon_tuning.py  simulate_sparse_gold_nanoparticle_coating.py  simulate_superluminal_pulse_sync.py  simulate_trinity_sovereignty.py  simulate_uaa_copper_metalloenzyme.py  sovereign_total_system_audit.py  zetto_attestation.py
.codebase-graph/: config.json  knowledge-graph.json
00_KNOWLEDGE/: 100_SOUTHEAST_ASIA_DIGITAL_WALLET_SUBSTRATE.md  101_CENTRAL_ASIA_KASPI_REMITTANCE_SUBSTRATE.md  101_CHARACTER_MANIFEST.md  102_ANZ_A$DC_STABLECOIN_SUBSTRATE.md  103_RUSSIA_RUBx_DFA_SUBSTRATE.md  104_CHINA_eCNY_AxCNH_COMMERCE_SUBSTRATE.md  105_US_GENIUS_ACT_FEDNOW_SUBSTRATE.md  106_US_NEOBANK_ONEPAY_CASHAPP_SUBSTRATE.md  107_GLOBAL_PROCESSOR_FISERV_FIS_SUBSTRATE.md  108_B2B_REVENUE_SHARE_AP_SUBSTRATE.md  109_INTERNATIONAL_ECOMMERCE_FX_MOR_SUBSTRATE.md  10_QUANTUM_FORENSICS.md  110_GLOBAL_SCF_MONEY_MARKET_SUBSTRATE.md  111_ZK_BTC_CRYPTO_TO_ANYONE_WORKFLOW_BRAINSTORM.md  112_MARGIN_CALL_CASCADE_MAY_2026_SOLUTIONS.md  113_HARDENED_ISLAND_THESIS_FORMALIZATION.md  114_DETERMINISTIC_MARGIN_CALL_EQUATIONS.md  115_PRIVATE_CREDIT_INSURANCE_CIRCULAR_RISK_SUBSTRATE.md  116_GLOBAL_CURRENCY_BOND_COLLAPSE_MANIFOLD.md  117_US_FISCAL_POLITICAL_LOCK_FORENSICS.md  118_THRIVE_IN_CHAOS_GAME_PLANS.md  119_JAPAN_AUSTIN_FOUNDRY_MANIFOLD.md  11_HEAVYSKILL_FABRIKA_INTEGRATION.md  120_MINT_MANAGED_ADAPTER_MANIFOLD.md  121_MINT_PHILOSOPHY_RESIDENCY_OF_THE_LARGE.md  122_MEMPRIVACY_SOVEREIGN_MEMORY_PROTECTION.md  123_MMPROLONG_LONG_CONTEXT_LVLM_SYNTHESIS.md  12_ANCESTRAL_BRIDGE_HEAVYSKILL.md  (+796 more)
04_SUBSTRATES/sovereign_trinity/zetto/: .gitignore  Cargo.toml
04_SUBSTRATES/sovereign_trinity/zetto/src/: lib.rs  shm.rs
cuda_tensor_engine/: Cargo.toml  build.rs  test_wasm.html
cuda_tensor_engine/proto/: pouw_mesh.proto
cuda_tensor_engine/spat_transformer/: Cargo.toml
cuda_tensor_engine/spat_transformer/src/: lib.rs
cuda_tensor_engine/src/: kani_proofs.rs  main.rs  oewse_driver.rs  oewse_orchestrator.rs  oewse_peer.rs  oewse_pouw_kernel.cu  oewse_worker.rs  zerosync_verifier.rs
cuda_tensor_engine/webgl/: iroh_mesh.js  webgl_engine.js  xnor_packed.frag  xnor_packed.vert
(+6032 files in other folders)
