[package]
name = "zetto"
version = "1.0.0"
edition = "2021"
description = "Sovereign Module Linker — Rust-powered bundler for the AGE REPUBLIC Trinity"
license = "MIT"

[lib]
name = "zetto"
crate-type = ["cdylib", "rlib"]

[dependencies]
sha3 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
